# landscape-tools

./: .gitignore  .sonarcloud.properties  CONTRIBUTING.md  INSTRUCTIONS.md  LandscapeTools.py  README.md  SECURITY.md  action.yml  buildimages.sh  coverage.xml  downloadcrunchbasedata.sh  landscapemembers.py  lflandscapeprojects.py  makememberprojectlogos.sh  maketextimages.sh  maketextlogo.py  newlandscapemembers.py  pyproject.toml  requirements.in  requirements.txt  sonar-project.properties  tests.py  updatelandscapemembers.py
.github/: dependabot.yml
.github/workflows/: cflite_pr.yml  codeql.yml  dependency-review.yml  main.yml  scorecard.yml  test.yml
landscape_tools/: __init__.py  cli.py  config.py  crunchbaseapimembers.py  crunchbasemembers.py  landscapemembers.py  landscapeoutput.py  lfxmembers.py  lfxprojects.py  member.py  members.py  sfdcmembers.py  sfdcprojects.py  svglogo.py  tacagendaproject.py
